p2ws_package/Devpp2ws-Package/objects/Crew_Appraisal_Answer__c.object
<CustomObject>
    <fields>
        <fullName>Appraisal_Id__c</fullName>
        <label>Appraisal Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Evaluated_Personel_Id__c</fullName>
        <label>Evaluated Personel Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Evaluator_Personel_Id__c</fullName>
        <label>Evaluator Personel Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flight_External_Id__c</fullName>
        <label>Flight External Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Number__c</fullName>
        <label>Form Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Raw__c</fullName>
        <label>Raw</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>Crew Appraisal Answer</label>
    <nameField>
        <label>Crew Appraisal Answer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Crew Appraisal Answers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>